--- a/shatter-search/admin/css/shatter-search-admin.css
+++ b/shatter-search/admin/css/shatter-search-admin.css
@@ -8,6 +8,9 @@
 .ss-wrap * {
     box-sizing: border-box;
 }
+.ss-wrap:not(i){
+    font-family: 'Montserrat', sans-serif;
+}
 .ss-header{
     background: #6f42c1;
     margin-top: 15px;
@@ -23,11 +26,9 @@
     margin-left: 2rem;
 }
 .ss-header span{
-    font-family: 'Montserrat', sans-serif;
     color:#fff;
 }
 .ss-header h1{
-    font-family: 'Montserrat', sans-serif;
     font-weight:800;
     font-size: 2rem;
     display: block;
@@ -104,27 +105,31 @@
 .ss-card.faded{
     background: rgba(255, 255, 255, 0.6);
 }
-@media only screen and (min-width: 992px) {
-    .ss-header img{
-        width:5%;
+@media only screen and (min-width: 768px) {
+
+    .ss-card form .ss-cols .ss-left{
+        width: 45% !important;
     }
-    .ss-header h1{
-        font-size: 3rem;
-    }
-    .ss-well{
-        align-items: center;
-    }
+
     .ss-cols{
         display:flex !important;
         align-items: start;
     }
 
-    .ss-card form{
-        width: 80%;
-    }
     .ss-cols .ss-left{
         width: 25%;
         padding:0px;
+    }
+
+    .ss-well{
+        align-items: center;
+    }
+
+    .ss-card form{
+        width: 80%;
+    }
+    .ss-card form .ss-cols .ss-left{
+        width: 35% !important;
     }
     .ss-cols .ss-right{
         width: 100%;
@@ -132,6 +137,25 @@
     }
     .ss-card form .ss-cols{
         align-items: stretch;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .ss-header img{
+        width:5%;
+    }
+    .ss-header h1{
+        font-size: 3rem;
+    }
+
+    .ss-card form .ss-cols .ss-left{
+        width: 25%;
+    }
+
+    .ss-w-lg-75{
+        width:75% !important;
+    }
+    .ss-table div:first-child{
+        min-width:15% !important;
     }
 }
 
@@ -207,29 +231,52 @@ ul.ss-links{
 .ss-bold{
     font-weight: bold;
 }
+.ss-mt-1{
+    margin-top: .25rem !important;
+}
 .ss-mt-2{
-    margin-top: 1.5rem;
+    margin-top: .5rem !important;
 }
-.ss-p-2{
-    padding: 1.5rem;
-}
-.ss-mb-0{
-    margin-bottom:0;
-}
-.ss-p-3{
-    padding:2rem;
+.ss-mt-3{
+    margin-top: 1rem !important;
 }
 
+.ss-mt-4{
+    margin-top: 2rem !important;
+}
+.ss-p-2{
+    padding: 1.5rem !important;
+}
+.ss-mb-0{
+    margin-bottom:0 !important;
+}
+.ss-p-3{
+    padding:2rem !important;
+}
+.ss-d-block{
+    display: block !important;
+}
 .ss-pt-2{
-    padding-top: 1.5rem;
+    padding-top: 1.5rem !important;
 }
 
 .ss-pt-3{
-    padding-top: 2rem;
+    padding-top: 2rem !important;
 }
 .ss-px-3{
-    padding-left:2rem;
-    padding-right:2rem;
+    padding-left:1rem !important;
+    padding-right:1rem !important;
+}
+
+.ss-px-4{
+    padding-left:2rem !important;
+    padding-right:2rem !important;
+}
+.ss-text-dark{
+    color: #444 !important
+}
+.ss-text-purple{
+    color: #8153d8 !important;
 }
 .ss-card form{
     margin:1rem 0 0 0;
@@ -237,13 +284,41 @@ ul.ss-links{
     border-radius: 0.25rem;
     box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
 }
+.ss-lh-1{
+    line-height: 1 !important;
+}
+.ss-card ul{
+    list-style-type: none;
+    margin:0px;
+    list-style-position: inside;
+    padding:0px;
+    padding-inline-start: 0;
+
+}
+.ss-card ul li a{
+    display:flex;
+    outline: none !important;
+    box-shadow: none !important;
+    align-items:center;
+}
+.ss-card ul li{
+    border-left: 3px solid #6f42c1;
+    margin:0 0 .75rem 0;
+    background: #fff;
+    font-size: 120%;
+    padding:.5rem 0 .5rem .25rem;
+
+}
 .ss-cols{
     display: block;
 }
 .ss-card form .ss-cols .ss-left{
     background: #f0efef;
 }
-
+.ss-link-unstyled{
+    text-decoration: none !important;
+    color: inherit;
+}
 .ss-card form .ss-cols:not(:first-child){
     border-top: 1px solid #ededed;
 }
@@ -255,7 +330,7 @@ ul.ss-links{
     width: 90%;
 }
 .ss-card form .ss-cols .ss-right input{
-    width: 60%;
+    width: 80%;
 }
 .ss-card form .ss-cols .ss-right{
     background: #f8f8f8;
@@ -270,7 +345,8 @@ ul.ss-links{
     align-items: center;
 }
 
-button.button-purple{
+button.button-purple,
+a.button-purple{
     background: #6f42c1 !important;
     color: #fff !important;
     border: none !important;
@@ -278,7 +354,8 @@ button.button-purple{
     border: 1px solid #6f42c1 !important;
 }
 
-button.button-purple:hover{
+button.button-purple:hover,
+a.button-purple:hover{
     background: #7851c1 !important;
     border: 1px solid #7851c1 !important;
 }
@@ -294,4 +371,29 @@ button.button-purple:hover{
     font-weight:500;
     font-size: 1.2rem;
     color:#ff0000;
+}
+.ss-w-100{
+    width:100%;
+}
+.ss-table{
+    display:flex;
+    align-items:center;
+}
+.ss-table div{
+    padding: .5rem;
+}
+.ss-table div:first-child{
+    background: #eee;
+    min-width:35%;
+    font-weight:bold;
+}
+
+.ss-table div:second-child{
+    background: blue;
+}
+.ss-news{
+    border-radius: 0.25rem;
+    background:#fff;
+    padding: 1.5rem;
+    border: 1px solid #dedede;
 }
