--- a/shatter-search/admin/css/shatter-search-admin.css
+++ b/shatter-search/admin/css/shatter-search-admin.css
@@ -253,6 +253,9 @@ ul.ss-links{
 .ss-p-3{
     padding:2rem !important;
 }
+.ss-d-none{
+    display: none !important;
+}
 .ss-d-block{
     display: block !important;
 }
