--- a/shatter-search/admin/css/shatter-search-admin.css
+++ b/shatter-search/admin/css/shatter-search-admin.css
@@ -400,3 +400,9 @@ a.button-purple:hover{
     padding: 1.5rem;
     border: 1px solid #dedede;
 }
+
+.ss-preview-image{
+    margin-top: 10px;
+    width: 302px;
+    height: 253px;
+}
